--- a/Metody tvorby multimedialneho obsahu/CSS/main.css
+++ b/Metody tvorby multimedialneho obsahu/CSS/main.css
@@ -1,7 +1,10 @@
-body{
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
+body {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 /*
 .header {
@@ -39,46 +42,177 @@ body{
     margin-top: 5px;
 }
 */
-.header{
-    color: #FFFF;
-    background-color: #FF6700;
+.header {
+  color: #ffff;
+  background-color: #ff6700;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
-.header ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+.header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-.header ul li{
-    float: left;
+.header ul li {
+  float: left;
 }
- #searchbar_li{
-    margin-top: 30px;
-    margin-right: 50px;
-    float: right;
+#searchbar_li {
+  margin-top: 27px;
+  margin-right: 50px;
+  float: right;
 }
-.searchbar{
-    border-radius: 10px;
-    width: 220px;
-    height: 40px;
-    text-align: center;
-    height: 20px;
-    float: right;
-}
-
-.logo{
-    width: 80px;
-    height: auto;
-}
-.intro{
-    margin-top: 50px;
-    text-align: justify;
-    font-family: Raleway;
-    margin-right: auto;
-    margin-left: auto;
-    width: 75%;
-}
-.intro p{
-    margin: auto;
+.searchbar {
+  border-radius: 10px;
+  width: 220px;
+  text-align: center;
+  height: 20px;
+  float: right;
 }
 
+.logo {
+  width: 80px;
+  height: auto;
+}
+.intro {
+  margin-top: 50px;
+  text-align: justify;
+  font-family: Raleway;
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
+.intro p {
+  margin: auto;
+}
+#main_photo {
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+}
+.main_photo_div {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+* {
+  box-sizing: border-box;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  margin-top: 50px;
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.specs {
+  margin-top: 50px;
+  text-align: justify;
+  font-family: Raleway;
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
+.specs p {
+  margin: auto;
+}
