--- a/Metody tvorby multimedialneho obsahu/CSS/main.css
+++ b/Metody tvorby multimedialneho obsahu/CSS/main.css
@@ -3,9 +3,6 @@ body {
   margin-right: 0px;
   margin-left: 0px;
 }
-::-webkit-scrollbar {
-  display: none;
-}
 /*
 .header {
     text-align: center; 
@@ -46,8 +43,10 @@ body {
   color: #ffff;
   background-color: #ff6700;
   position: -webkit-sticky;
+  font-family: Raleway;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 .header ul {
   list-style-type: none;
@@ -113,7 +112,11 @@ body {
   margin-top: 50px;
   display: none;
 }
-
+#slide
+{
+  max-height: 500px;
+  width: auto;
+}
 /* Next & previous buttons */
 .prev,
 .next {
@@ -123,7 +126,7 @@ body {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -156,7 +159,7 @@ body {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -215,4 +218,21 @@ body {
 }
 .specs p {
   margin: auto;
+}
+.compare{
+  margin-top: 50px;
+  text-align: justify;
+  font-family: Raleway;
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%
+}
+.compare ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.compare ul li {
+  float: left;
 }
