--- a/Metody tvorby multimedialneho obsahu/CSS/main.css
+++ b/Metody tvorby multimedialneho obsahu/CSS/main.css
@@ -99,7 +99,6 @@ body {
   box-sizing: border-box;
 }
 
-/* Slideshow container */
 .slideshow-container {
   
   max-width: 500px;
@@ -107,7 +106,6 @@ body {
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   margin-top: 50px;
   display: none;
@@ -117,7 +115,6 @@ body {
   max-height: 500px;
   width: auto;
 }
-/* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
@@ -134,19 +131,16 @@ body {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -157,7 +151,6 @@ body {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: black;
   font-size: 12px;
@@ -166,7 +159,6 @@ body {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -183,7 +175,6 @@ body {
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -220,6 +211,37 @@ body {
   margin: auto;
 }
 .compare{
+  width: 75%;
+  height: 1000px;
+  margin: auto;
+  padding: 10px;
+  margin-top: 50px;
+  text-align: justify;
+  font-family: Raleway;
+}
+.one{
+  width: 50%;
+  height: 100%;
+    float: left;
+}
+.two{
+  margin-left: 50%;
+  height: 100%;
+}
+.compare_text , .compare_text2{
+  text-align: justify;
+  font-family: Raleway;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 80%;
+}
+.compare_photo1 , .compare_photo2{
+width: 100%;
+height: auto;
+margin: 0 auto;
+}
+/*
+.compare{
   margin-top: 50px;
   text-align: justify;
   font-family: Raleway;
@@ -234,5 +256,6 @@ body {
   overflow: hidden;
 }
 .compare ul li {
-  float: left;
+  display: inline;
 }
+*/
